tests/features/error_handling/risk_trap.out
Inside risk block, before error
Caught an error: [E5002] Traceback (most recent call last):
  File tests/features/error_handling/risk_trap.sad, line 3, in <program>
        a = 10 / 0
                 ^
DivisionByZeroError: Division by zero
  Hint: Check that the divisor is not zero before dividing. Example: `when b != 0 { result = a / b }`
Inside clean block
---
Inside another risk block
No error here
Inside the second clean block
